--- a/src/bp/ui-studio/src/web/components/Shared/Interface/style.scss
+++ b/src/bp/ui-studio/src/web/components/Shared/Interface/style.scss
@@ -5,7 +5,7 @@ $status-bar-height: 30px;
   height: 100%;
 }
 
-.fullsize {
+.fullsize, .fullsize > div {
   height: 100%;
 }
 
@@ -87,7 +87,7 @@ $status-bar-height: 30px;
   flex-grow: 1;
   align-items: center;
   justify-content: center;
-  overflow: scroll;
+  overflow: auto;
 
   svg {
     font-size: 250px;
