--- a/src/bp/ui-studio/src/web/views/Content/style.scss
+++ b/src/bp/ui-studio/src/web/views/Content/style.scss
@@ -7,6 +7,22 @@
   color: red;
 }
 
+.tableWrapper {
+  padding: 5px;
+}
+
+.contentListWrapper {
+  height: calc(100% - 36px);
+
+  :global(.ReactTable) {
+    height: 100% !important;
+  }
+
+  :global(.ReactTable .rt-tbody) {
+    overflow: initial !important;
+  }
+}
+
 .modal {
   .cancel {
     position: absolute;
